# New_year_Project

./: .gitignore  pyproject.toml
new-year-ivent/: game.py  read_dict.py  result_dict.txt  Карточки_даты_получения_баллов.txt  Общая_сумма_баллов.txt
